log
Thu 21 Mar 2024 08:05:13 PM UTC: 
 tests:  0|5
total_score: 0/70
220a800
Thu 21 Mar 2024 08:11:49 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|4
total_score: 10/70
4ccc86a
Thu 21 Mar 2024 08:13:37 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  1|4
total_score: 10/70
2684638
Thu 21 Mar 2024 08:13:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
37624c4
Thu 21 Mar 2024 08:23:30 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
55019d8
Thu 21 Mar 2024 08:45:59 PM UTC: 
 exercises.c | 29 +++++++++++++++++++++++++----
 1 file changed, 25 insertions(+), 4 deletions(-)
 tests:  4|1
total_score: 50/70
0b6bf0e
Thu 21 Mar 2024 09:03:41 PM UTC: 
 exercises.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  4|1
total_score: 50/70
6c1d6c9
Thu 21 Mar 2024 09:09:14 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:149:29: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  149 |         if((*arriba) == '(' && caracter == ')'|| (*arriba) == '[' && caracter == ']'||     caracter == '}' && (*arriba) == '{') pop(pila);
      |            ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
exercises.c:149:108: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  149 |         if((*arriba) == '(' && caracter == ')'|| (*arriba) == '[' && caracter == ']'||     caracter == '}' && (*arriba) == '{') pop(pila);
      |                                                                                            ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
719ba17
Thu 21 Mar 2024 09:09:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
33761e7
Fri 22 Mar 2024 01:11:24 AM UTC: 
 exercises.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  4|1
total_score: 50/70
7f56b81
Fri 22 Mar 2024 01:15:17 AM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  4|1
total_score: 50/70
1c49ebc
Fri 22 Mar 2024 01:16:56 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
ba4364c
Fri 22 Mar 2024 01:23:21 AM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
b6b1cfd
Fri 22 Mar 2024 01:25:21 AM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:158:9: error: ‘else’ without a previous ‘if’
  158 |         else
      |         ^~~~
Compilation failed
0ec80e1
Fri 22 Mar 2024 01:29:10 AM UTC: 
 exercises.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  4|1
total_score: 50/70
76dec21
Fri 22 Mar 2024 01:29:24 AM UTC: 
 exercises.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  4|1
total_score: 50/70
b197a61
Fri 22 Mar 2024 01:31:20 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
bdf23a3
Fri 22 Mar 2024 01:31:46 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
3ebbafd
Fri 22 Mar 2024 01:32:24 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
420c56b
Fri 22 Mar 2024 01:33:18 AM UTC: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  4|1
total_score: 50/70
28a65ea
Fri 22 Mar 2024 01:34:05 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
e6cc702
Fri 22 Mar 2024 01:35:15 AM UTC: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|1
total_score: 50/70
21e970a
